...
                          strokeWidth: 2,
                          color: context.mp.textPrimary,
                        ),
                      )
                    : _emailSent
                    ? const Text('Email Sent')
                    : const Text('Send Reset Email'),
              ),
              const SizedBox(height: 16),
              if (_emailSent)
                TextButton(
                  onPressed: () {
                    Navigator.of(context).pop();
...
